# kllm

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SETUP.md  docker-compose.yml  pyproject.toml
configs/: gpt_oss_20b.yaml  nemotron_nano.yaml  qwen3_14b.yaml
data/: prepare_data.py
evaluation/: run_eval.py
notebooks/: quickstart.ipynb
scripts/: chat.py  export_gguf.py  hub.py  push_to_hub.py  tracking.py  train_gpt_oss.py  train_nemotron.py  train_qwen3.py
