[project]
name = "kllm"
version = "0.1.0"
description = "Fine-tune LLMs with LoRA/QLoRA on consumer hardware"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "wandb>=0.18.0",
    "tensorboard>=2.18.0",
    "lm-eval>=0.4.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "pyyaml>=6.0.0",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.7.0", "pytest>=8.0.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
